# condor-rs

./: .all-contributorsrc  .gitignore  CODEOWNER  CODEOWNERS  Cargo.toml  LICENSE  README.md  default_4731965776967488239_0_6388.profraw  default_4731965776967488239_0_6389.profraw  default_4731965776967488239_0_6410.profraw  deny.toml
.githooks/: pre-push
coverage/: tarpaulin-report.html
labrador/: Cargo.toml
labrador/benches/: ajtai.rs  prover.rs  verifier.rs
labrador/doc/: hierarchical_commitment.md  recursion.md
labrador/examples/: aggregate_falcon.rs  benchmark.rs  labrador_verifier.rs  simple_commit.rs
labrador/src/: ajtai_commitment.rs  algebra.rs  hierarchical_commitment.rs  jl.rs  lib.rs  main.rs  poly.rs  poly_ring.rs  poseidon.rs  prover.rs  rq.rs  rq_matrix.rs  rq_vector.rs  statement.rs  transcript.rs  utils.rs  verifier.rs  zq.rs  zq_vector.rs
labrador/src/algebra/: rq.rs  zq.rs
labrador/src/commitments/: ajtai_commitment.rs  ajtai_commitment_omid.rs  combined_commitments.rs  common_instances.rs  garbage_commitment.rs  garbage_polynomials.rs  hierarchical_commitment.rs  hierarchical_commitment_omid.rs  mod.rs  outer_commitments.rs
labrador/src/core/: aggregate.rs  challenge_set.rs  crs.rs  env_params.rs  garbage_polynomials.rs  inner_product.rs  jl.rs  mod.rs  statement.rs
labrador/src/poseidon/: constants.rs  mod.rs  permutation.rs  shake_sponge.rs  sponge.rs  transcript.rs
labrador/src/relation/: env_params.rs  mod.rs  statement.rs  witness.rs
labrador/src/ring/: mod.rs  poly.rs  rq.rs  rq_matrix.rs  rq_vector.rs  zq.rs
labrador/src/transcript/: lib.rs  mod.rs  shake_sponge.rs
labrador/src/transcript/poseidon/: permutation.rs  sponge.rs
labrador/src/transcript/sponges/: mod.rs
labrador/src/transcript/sponges/poseidon/: instance.rs  sponge.rs
labrador/src/transcript/sponges/shake/: mod.rs
labrador/src/utils/: aggregate.rs  challenge_set.rs  crs.rs  decompose.rs  env_params.rs  statement.rs
src/: lib.rs  (+1 more)
(+18 files in other folders)
