[package]
name = "labrador"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
zerocopy = "0.8"
rand = {version = "0.9", default-features = false, features = ["thread_rng", "unbiased"] }
thiserror = {version = "1.0", default-features = false }
blake2 = "0.11.0-pre.5"
[features]
skip-slow-tests = []

