[package]
name = "labrador"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
zerocopy = "0.8"
rand = {version = "0.9", default-features = false, features = ["thread_rng", "unbiased"] }
rustfft = "6.2.0"
thiserror = {version = "1.0", default-features = false }
blake2 = {version = "0.11.0-pre.5", default-features = false }
sha3 = {version = "0.10.8", default-features = false }
[features]
skip-slow-tests = []

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }

[[bench]]
name = "prover"
harness = false

[[bench]]
name = "verifier"
harness = false

[[bench]]
name = "ajtai"
harness = false